--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
     rel="icon" type="image/x-icon" />
   <title>Welcome</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-  <h1>Welcome, Edward.</h1>
-  <h2 id="clock"></h2>
-  <h3 id="day"></h3>
-  <p id="hex-color"></p>
-  <script src="app.js"></script>
+  <div id="particles-js"></div>
+  <div class="container">
+    <h1>Welcome, Edward.</h1>
+    <h2 id="clock"></h2>
+    <h3 id="day"></h3>
+    <p id="hex-color"></p>
+    <div class="card">
+      <a href=http://www.cleardarksky.com/c/WnySkObNYkey.html> <img src="http://www.cleardarksky.com/c/WnySkObNYcsk.gif?c=1076447"></a>
+    </div>
+  </div>
+  <script src="js/particles.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
