--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <a href=http://www.cleardarksky.com/c/WnySkObNYkey.html> <img src="http://www.cleardarksky.com/c/WnySkObNYcsk.gif?c=1076447"></a>
     </div>
   </div>
-  <!-- <script src="js/particles.min.js"></script>
-  <script src="js/app.js"></script> -->
+  <script src="js/particles.min.js"></script>
+  <script src="js/app.js"></script>
   <script src="js/main.js"></script>
 </body>
 
