--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     <p id="hex-color"></p>
     <div class="card">
       <a href=http://www.cleardarksky.com/c/WnySkObNYkey.html> <img src="http://www.cleardarksky.com/c/WnySkObNYcsk.gif?c=1076447"></a>
+      <table class="weather-info"></table>
     </div>
   </div>
   <script src="js/particles.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/weather.js"></script>
 </body>
 
 </html>
